*Added media queries for 768px, 1024px and 1366px *(bugfix) removed function of removing HTML overflow with menu's li *(feat) changed max-width of wrapper

--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -9,6 +9,7 @@
 
 .hero p {
   color: var(--paragraph);
+  max-width: 45ch;
 }
 
 .hero div {
