--- a/src/css/components/services.css
+++ b/src/css/components/services.css
@@ -4,11 +4,14 @@
 
 .services h2 {
   margin-bottom: 3.2rem;
+  text-align: center;
 }
 
 .service-container {
   width: 100%;
   max-width: 39.2rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .service-container:not(:nth-of-type(1)) {
