--- a/src/css/utilities/wrapper.css
+++ b/src/css/utilities/wrapper.css
@@ -3,7 +3,7 @@
   align-items: inherit;
   justify-content: inherit;
   width: 100%;
-  max-width: 140rem;
+  max-width: 155rem;
   margin-left: auto;
   margin-right: auto;
 }
